--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cop.utils</groupId>
     <artifactId>json</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
     <url>http://github.com/${github.user}/${github.project}</url>
@@ -63,12 +63,7 @@
             <name>name</name>
             <url>${project.url}</url>
             <distribution>repo</distribution>
-            <comments>
-                The copyright of the computer program is the property of ${project.organization.name} The program may
-                be used and/or copied only with the written permission of ${project.organization.name} or in accordance
-                with the terms and conditions stipulated in the agreement/contract under which the program has been
-                supplied.
-            </comments>
+            <comments/>
         </license>
     </licenses>
 
@@ -109,6 +104,12 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>3.6.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
