--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven-api.version>3.3.9</maven-api.version>
         <maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>
+        <versions-maven-plugin.version>2.3</versions-maven-plugin.version>
         <jdk.version>1.8</jdk.version>
         <jackson.version>2.8.5</jackson.version>
         <github.project>json-utils</github.project>
@@ -195,7 +196,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
-                <version>2.3</version>
+                <version>${versions-maven-plugin.version}</version>
             </plugin>
         </plugins>
     </build>
@@ -348,7 +349,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
-                <version>2.3</version>
+                <version>${versions-maven-plugin.version}</version>
             </plugin>
         </plugins>
     </reporting>
