--- a/pom.xml
+++ b/pom.xml
@@ -16,13 +16,16 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven-api.version>3.3.9</maven-api.version>
+        <copyright>Copyright © ${project.inceptionYear} Oleg Cherednik</copyright>
         <maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>
+        <checkstyle.verstion>7.4</checkstyle.verstion>
         <versions-maven-plugin.version>2.3</versions-maven-plugin.version>
+        <cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
         <jdk.version>1.8</jdk.version>
-        <jackson.version>2.8.5</jackson.version>
+        <jackson.version>2.8.6</jackson.version>
         <github.project>json-utils</github.project>
         <github.user>oleg-cherednik</github.user>
+        <lib.dir>${project.build.directory}/lib</lib.dir>
     </properties>
 
     <prerequisites>
@@ -77,11 +80,6 @@
             <artifactId>jackson-core</artifactId>
             <version>${jackson.version}</version>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>com.fasterxml.jackson.core</groupId>-->
-        <!--<artifactId>jackson-annotations</artifactId>-->
-        <!--<version>${jackson.version}</version>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-joda</artifactId>
@@ -146,31 +144,8 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-plugin-plugin</artifactId>
-                <version>3.5</version>
-                <configuration>
-                    <goalPrefix>raml</goalPrefix>
-                    <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>mojo-descriptor</id>
-                        <goals>
-                            <goal>descriptor</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>help-goal</id>
-                        <goals>
-                            <goal>helpmojo</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.10</version>
+                <version>3.0.0</version>
                 <configuration>
                     <outputDirectory>${lib.dir}</outputDirectory>
                     <overWriteReleases>false</overWriteReleases>
@@ -191,6 +166,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.6</version>
+                <configuration>
+                    <locales>en</locales>
+                </configuration>
                 <dependencies>
                     <dependency>
                         <groupId>org.apache.maven.doxia</groupId>
@@ -199,6 +177,31 @@
                     </dependency>
                 </dependencies>
             </plugin>
+            <!--plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>${cobertura-maven-plugin.version}</version>
+                <configuration>
+                    <check>
+                        <branchRate>85</branchRate>
+                        <lineRate>85</lineRate>
+                        <haltOnFailure>true</haltOnFailure>
+                        <totalBranchRate>85</totalBranchRate>
+                        <totalLineRate>85</totalLineRate>
+                        <packageLineRate>85</packageLineRate>
+                        <packageBranchRate>85</packageBranchRate>
+                        <regexes>
+                            <regex>
+                                <pattern>cop.*</pattern>
+                                <branchRate>90</branchRate>
+                                <lineRate>80</lineRate>
+                            </regex>
+                        </regexes>
+                    </check>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                    <quiet>true</quiet>
+                </configuration>
+            </plugin-->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
@@ -206,6 +209,65 @@
                 <configuration>
                     <rulesUri>file:///${project.build.outputDirectory}/maven/version-rules.xml</rulesUri>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>${maven-checkstyle-plugin.version}</version>
+                <configuration>
+                    <configLocation>${project.build.outputDirectory}/maven/checkstyle.xml</configLocation>
+                    <consoleOutput>true</consoleOutput>
+                    <failsOnError>false</failsOnError>
+                    <enableRulesSummary>true</enableRulesSummary>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                    <propertyExpansion>basedir=${project.build.outputDirectory}/maven</propertyExpansion>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.puppycrawl.tools</groupId>
+                        <artifactId>checkstyle</artifactId>
+                        <version>${checkstyle.verstion}</version>
+                    </dependency>
+                </dependencies>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.mycila.maven-license-plugin</groupId>
+                <artifactId>maven-license-plugin</artifactId>
+                <version>1.10.b1</version>
+                <configuration>
+                    <header>maven/license.txt</header>
+                    <useDefaultExcludes>true</useDefaultExcludes>
+                    <quiet>false</quiet>
+                    <includes>
+                        <include>**/cop/**/*.java</include>
+                    </includes>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                    <skipExistingHeaders>false</skipExistingHeaders>
+                    <strictCheck>true</strictCheck>
+                    <aggregate>true</aggregate>
+                    <properties>
+                        <copyright>${copyright}</copyright>
+                    </properties>
+                    <headerDefinitions>
+                        <headerDefinition>maven/header.xml</headerDefinition>
+                    </headerDefinitions>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>format</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
@@ -223,15 +285,15 @@
                     <quiet>true</quiet>
                 </configuration>
             </plugin>
-            <!--plugin>
+            <plugin>
                 <groupId>com.soebes.maven.plugins.mlv</groupId>
                 <artifactId>maven-license-verifier-plugin</artifactId>
-                <version>${maven-license-verifier-plugin.version}</version>
+                <version>0.4</version>
                 <configuration>
-                    <licenseFile>${shared-resources.dir}/license.xml</licenseFile>
+                    <licenseFile>${project.build.outputDirectory}/maven/license.xml</licenseFile>
                     <goal>verify</goal>
                 </configuration>
-            </plugin-->
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
@@ -242,15 +304,18 @@
                     <sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
                 </configuration>
             </plugin>
-            <!--plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>${maven-checkstyle-plugin.version}</version>
                 <configuration>
-                    <configLocation>/maven/checkstyle.xml</configLocation>
+                    <configLocation>${project.build.outputDirectory}/maven/checkstyle.xml</configLocation>
                     <consoleOutput>false</consoleOutput>
+                    <enableRulesSummary>true</enableRulesSummary>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                    <propertyExpansion>basedir=${project.build.outputDirectory}/maven</propertyExpansion>
                 </configuration>
-            </plugin-->
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
@@ -296,27 +361,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.7</version>
-                <configuration>
-                    <check>
-                        <branchRate>85</branchRate>
-                        <lineRate>85</lineRate>
-                        <haltOnFailure>true</haltOnFailure>
-                        <totalBranchRate>85</totalBranchRate>
-                        <totalLineRate>85</totalLineRate>
-                        <packageLineRate>85</packageLineRate>
-                        <packageBranchRate>85</packageBranchRate>
-                        <regexes>
-                            <regex>
-                                <pattern>cop.*</pattern>
-                                <branchRate>90</branchRate>
-                                <lineRate>80</lineRate>
-                            </regex>
-                        </regexes>
-                    </check>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                    <quiet>true</quiet>
-                </configuration>
+                <version>${cobertura-maven-plugin.version}</version>
             </plugin>
             <!--plugin>
                 <groupId>org.codehaus.mojo</groupId>
