--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cop.utils</groupId>
     <artifactId>json</artifactId>
-    <version>1.0.1</version>
+    <version>2.8.9</version>
     <packaging>jar</packaging>
 
     <url>http://github.com/${github.user}/${github.project}</url>
@@ -22,7 +22,7 @@
         <versions-maven-plugin.version>2.3</versions-maven-plugin.version>
         <cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
         <jdk.version>1.8</jdk.version>
-        <jackson.version>2.8.6</jackson.version>
+        <jackson.version>2.12.0</jackson.version>
         <github.project>json-utils</github.project>
         <github.user>oleg-cherednik</github.user>
         <github.maven-repo>m2</github.maven-repo>
@@ -94,10 +94,33 @@
             <version>${jackson.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
             <version>1.1.0.Final</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-afterburner</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+
+
 
         <dependency>
             <groupId>org.testng</groupId>
