--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
+.gradle
+/gradlew
+/gradlew.bat
+/gradle/
+.idea
 *.iml
-.idea/
-.classpath
-.project
-.settings/
-target/
-out/
-classes/
+build
+/out/
+/wrapper/
