--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ repositories {
     mavenCentral()
 }
 
-group 'ru.oleg-cherednik.utils.jackson'
+group 'ru.oleg-cherednik.utils'
 version '2.12.0.2'
 
 sourceCompatibility = '1.8'
