--- a/build.gradle
+++ b/build.gradle
@@ -21,12 +21,12 @@ repositories {
 }
 
 group 'ru.oleg-cherednik.jackson'
-version '2.6'
+version '2.66'
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 }
 
@@ -42,20 +42,20 @@ dependencies {
 
     implementation "ru.oleg-cherednik.utils.reflection:reflection-utils:${property('reflection-utils.version')}"
 
-    testImplementation('org.testng:testng:7.5') {
+    testImplementation('org.testng:testng:7.8.0') {
         exclude group: 'junit', module: 'junit'
         exclude group: 'org.apache.ant', module: 'ant'
     }
 
     testImplementation "com.fasterxml.jackson.core:jackson-databind:${property('jackson.version')}"
     testImplementation "com.fasterxml.jackson.module:jackson-module-afterburner:${property('jackson.version')}"
-    testImplementation "com.fasterxml.jackson.module:jackson-module-parameter-names:2.13.2"
+    testImplementation "com.fasterxml.jackson.module:jackson-module-parameter-names:${property('jackson.version')}"
     testImplementation "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:${property('jackson.version')}"
     testImplementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${property('jackson.version')}"
 
-    testImplementation 'org.assertj:assertj-core:3.22.0'
-    testImplementation 'commons-io:commons-io:2.11.0'
-    testImplementation 'org.mockito:mockito-core:4.5.1'
+    testImplementation 'org.assertj:assertj-core:3.24.2'
+    testImplementation 'commons-io:commons-io:2.15.0'
+    testImplementation 'org.mockito:mockito-core:5.6.0'
 
     testImplementation("org.springframework.boot:spring-boot-starter-web:${property('spring-boot.version')}") {
         exclude group: 'org.junit.jupiter'
@@ -72,8 +72,8 @@ dependencies {
 
 jacocoTestReport {
     reports {
-        xml.enabled true
-        html.enabled true
+        xml.required = true
+        html.required = true
     }
 }
 
