--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,7 @@
-jackson.version=2.13.2
+# https://docs.gradle.org/current/userguide/performance.html
+org.gradle.parallel=true
+org.gradle.daemon=true
+org.gradle.caching=false
+jackson.version=2.15.3
 reflection-utils.version=1.0
-spring-boot.version=2.6.7
+spring-boot.version=2.7.17
