--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ plugins {
     id 'jacoco'
     id 'java-library'
     id 'org.cadixdev.licenser' version '0.6.1'
+    id 'io.franzbecker.gradle-lombok' version '4.0.0'
 
     id 'signing'
     id 'maven-publish'
@@ -21,13 +22,17 @@ repositories {
 }
 
 group 'ru.oleg-cherednik.jackson'
-version '2.6'
+version '2.7'
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += ['-Xlint:unchecked']
 }
 
 configurations {
@@ -42,20 +47,22 @@ dependencies {
 
     implementation "ru.oleg-cherednik.utils.reflection:reflection-utils:${property('reflection-utils.version')}"
 
-    testImplementation('org.testng:testng:7.5') {
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+
+    testImplementation('org.testng:testng:7.8.0') {
         exclude group: 'junit', module: 'junit'
         exclude group: 'org.apache.ant', module: 'ant'
     }
 
     testImplementation "com.fasterxml.jackson.core:jackson-databind:${property('jackson.version')}"
     testImplementation "com.fasterxml.jackson.module:jackson-module-afterburner:${property('jackson.version')}"
-    testImplementation "com.fasterxml.jackson.module:jackson-module-parameter-names:2.13.2"
+    testImplementation "com.fasterxml.jackson.module:jackson-module-parameter-names:${property('jackson.version')}"
     testImplementation "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:${property('jackson.version')}"
     testImplementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${property('jackson.version')}"
 
-    testImplementation 'org.assertj:assertj-core:3.22.0'
-    testImplementation 'commons-io:commons-io:2.11.0'
-    testImplementation 'org.mockito:mockito-core:4.5.1'
+    testImplementation 'org.assertj:assertj-core:3.24.2'
+    testImplementation 'commons-io:commons-io:2.15.0'
+    testImplementation 'org.mockito:mockito-core:5.6.0'
 
     testImplementation("org.springframework.boot:spring-boot-starter-web:${property('spring-boot.version')}") {
         exclude group: 'org.junit.jupiter'
@@ -68,12 +75,14 @@ dependencies {
         exclude group: 'org.junit.vintage'
         exclude group: 'org.junit.jupiter'
     }
+
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
 }
 
 jacocoTestReport {
     reports {
-        xml.enabled true
-        html.enabled true
+        xml.required = true
+        html.required = true
     }
 }
 
