--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -6,11 +6,20 @@ jobs:
   # build – произвольно выбранное имя задания
   # их может быть больше одного
   build:
-    # операционная система для работы воркфлоу
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+          settings-path: ${{ github.workspace }} # location for the settings.xml file
       - name: Run a build
         run: ./gradlew compileJava compileTestJava --stacktrace
       - name: Run tests
