--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -24,6 +24,10 @@ jobs:
         run: ./gradlew test
       - name: Build test coverage report
         run: ./gradlew jacocoTestReport
+      - name: Send test coverage report to CodeCov
+        run: |
+          bash <(curl -s https://codecov.io/bash)
+          bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r build/reports/jacoco/test/jacocoTestReport.xml
       # run – произвольная bash-команда
       # ls -la выведет содержимое текущего репозитория
       - run: ls -la
