--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -28,5 +28,5 @@ jobs:
         uses: codacy/codacy-coverage-reporter-action@v1
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-#          coverage-reports: ./build/repo
+          coverage-reports: build/reports/jacoco/test/jacocoTestReport.xml
       - run: ls -la
