Update GitHub actions

--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -2,14 +2,14 @@ name: test-ci
 on: push
 jobs:
   java-8:
-    uses: oleg-cherednik/github-workflows/.github/workflows/gradle-java-build-test.yml.yml@main
+    uses: oleg-cherednik/github-workflows/.github/workflows/gradle-java-build-test.yml@main
     with:
       java-version: '8'
   java-11:
-    uses: oleg-cherednik/github-workflows/.github/workflows/gradle-java-build-test.yml.yml@main
+    uses: oleg-cherednik/github-workflows/.github/workflows/gradle-java-build-test.yml@main
     with:
       java-version: '11'
   java-17:
-    uses: oleg-cherednik/github-workflows/.github/workflows/gradle-java-build-test.yml.yml@main
+    uses: oleg-cherednik/github-workflows/.github/workflows/gradle-java-build-test.yml@main
     with:
       java-version: '17'
