--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -6,6 +6,7 @@ jobs:
     with:
       java-version: '8'
       codacy-report: true
+    secrets: inherit
   java-11:
     uses: oleg-cherednik/github-workflows/.github/workflows/gradle-java-build-test.yml@main
     with:
